--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  
   flutter:
     sdk: flutter
 
@@ -28,6 +29,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
+  bloc : ^6.1.0
+  flutter_bloc : ^6.1.0
+  formz: ^0.3.2
 
 dev_dependencies:
   flutter_test:
