--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_staggered_grid_view: ^0.3.2
+  flutter_snake_navigationbar: ^0.2.0
 
 
   # The following adds the Cupertino Icons font to your application.
