--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,8 +30,8 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_staggered_grid_view: ^0.3.2
-  flutter_snake_navigationbar: ^0.2.0
-
+  flutter_snake_navigationbar: ^0.4.1+3
+  bottom_personalized_dot_bar: ^1.0.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
