--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   flutter_snake_navigationbar: ^0.4.1+3
   bottom_personalized_dot_bar: ^1.0.2
   expandable: ^4.1.4
+  carousel_slider: ^3.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
